[metadata]
license_file = COPYING.LESSER

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = rtctools_diagnostics/_version.py
parentdir_prefix = rtctools_diagnostics-

[flake8]
max-line-length = 120